--- a/libs/dh/charges/feature-charges/project.json
+++ b/libs/dh/charges/feature-charges/project.json
@@ -7,7 +7,7 @@
   "tags": ["product:dh", "domain:charges", "type:feature"],
   "targets": {
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "passWithNoTests": true
