--- a/libs/dh/metering-point/feature-overview/project.json
+++ b/libs/dh/metering-point/feature-overview/project.json
@@ -7,7 +7,7 @@
   "tags": ["product:dh", "domain:metering-point", "type:feature"],
   "targets": {
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{workspaceRoot}/coverage/libs/dh/metering-point/feature-overview"],
       "options": {
         "config": "libs/dh/metering-point/feature-overview/vite.config.mts"
