--- a/libs/dh/wholesale/shell/project.json
+++ b/libs/dh/wholesale/shell/project.json
@@ -7,7 +7,7 @@
   "tags": ["product:dh", "domain:wholesale", "type:shell"],
   "targets": {
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "vitestConfig": "libs/dh/wholesale/shell/vite.config.mts"
