--- a/libs/dh/admin/shell/project.json
+++ b/libs/dh/admin/shell/project.json
@@ -7,7 +7,7 @@
   "tags": ["product:dh", "domain:admin", "type:shell"],
   "targets": {
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     },
     "lint": {
