--- a/libs/dh/auth/feature-msal/project.json
+++ b/libs/dh/auth/feature-msal/project.json
@@ -7,7 +7,7 @@
   "tags": ["product:dh", "domain:auth", "type:feature"],
   "targets": {
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{workspaceRoot}/coverage/libs/dh/auth/feature-msal"]
     },
     "lint": {
