--- a/libs/dh/market-participant/ui-shared/project.json
+++ b/libs/dh/market-participant/ui-shared/project.json
@@ -4,9 +4,10 @@
   "projectType": "library",
   "sourceRoot": "libs/dh/market-participant/ui-shared/src",
   "prefix": "dh",
+  "tags": ["product:dh", "domain:market-participant", "type:ui"],
   "targets": {
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{workspaceRoot}/coverage/libs/dh/market-participant/ui-shared"],
       "options": {
         "configFile": "libs/dh/market-participant/ui-shared/vite.config.mts"
@@ -15,6 +16,5 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["product:dh", "domain:market-participant", "type:ui"]
+  }
 }
