--- a/libs/dh/shared/data-access-graphql/project.json
+++ b/libs/dh/shared/data-access-graphql/project.json
@@ -8,7 +8,7 @@
   "implicitDependencies": ["api-dh"],
   "targets": {
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "config": "libs/dh/shared/data-access-graphql/vite.config.mts"
