--- a/libs/dh/shared/feature-flags/project.json
+++ b/libs/dh/shared/feature-flags/project.json
@@ -7,7 +7,7 @@
   "tags": ["product:dh", "domain:shared", "type:feature"],
   "targets": {
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{workspaceRoot}/coverage/libs/dh/shared/feature-flags"],
       "options": {
         "configFile": "libs/dh/shared/feature-flags/vite.config.mts"
