--- a/libs/dh/shared/util-operators/project.json
+++ b/libs/dh/shared/util-operators/project.json
@@ -7,7 +7,7 @@
   "tags": ["product:dh", "domain:shared", "type:util"],
   "targets": {
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{workspaceRoot}/coverage/libs/dh/shared/util-operators"],
       "options": {
         "config": "libs/dh/shared/util-operators/vite.config.mts"
