--- a/libs/gf/util-browser/project.json
+++ b/libs/gf/util-browser/project.json
@@ -7,7 +7,7 @@
   "tags": ["product:gf", "domain:shared", "type:util"],
   "targets": {
     "test": {
-      "executor": "@nx/vite:test",
+      "executor": "@nx/vitest:test",
       "outputs": ["{options.reportsDirectory}"],
       "options": {
         "reportsDirectory": "../../../coverage/libs/gf/util-browser"
