--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "review": "gh pr checkout --"
   },
   "dependencies": {
-    "@analogjs/vite-plugin-angular": "1.20",
+    "@analogjs/vite-plugin-angular": "2.1.3",
     "@angular/animations": "20.3.6",
     "@angular/cdk": "20.2.9",
     "@angular/common": "20.3.6",
@@ -98,13 +98,13 @@
     "papaparse": "5.5.3",
     "qs": "6.12.1",
     "rxjs": "7.8.2",
-    "storybook": "9.0.10",
+    "storybook": "10.1.9",
     "tslib": "2.4.0",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
     "@actions/core": "1.10.1",
-    "@analogjs/vitest-angular": "1.19.1",
+    "@analogjs/vitest-angular": "2.1.3",
     "@angular-eslint/eslint-plugin": "20.4.0",
     "@angular-eslint/eslint-plugin-template": "20.4.0",
     "@angular-eslint/template-parser": "20.4.0",
@@ -115,7 +115,7 @@
     "@babel/runtime": "7.26.10",
     "@badeball/cypress-cucumber-preprocessor": "22.2.0",
     "@bahmutov/cypress-esbuild-preprocessor": "2.2.5",
-    "@cypress/webpack-dev-server": "4.0.1",
+    "@cypress/webpack-dev-server": "5.1.4",
     "@graphql-codegen/cli": "5.0.7",
     "@graphql-codegen/fragment-matcher": "5.1.0",
     "@graphql-codegen/import-types-preset": "3.0.1",
@@ -129,25 +129,26 @@
     "@jsverse/transloco-optimize": "7.0.1",
     "@ngrx/eslint-plugin": "18.1.1",
     "@nx-dotnet/utils": "2.5.0",
-    "@nx/angular": "22.0.2",
-    "@nx/cypress": "22.0.2",
-    "@nx/devkit": "22.0.2",
-    "@nx/eslint": "22.0.2",
-    "@nx/eslint-plugin": "22.0.2",
-    "@nx/js": "22.0.2",
-    "@nx/plugin": "22.0.2",
-    "@nx/storybook": "22.0.2",
-    "@nx/vite": "22.0.2",
-    "@nx/web": "22.0.2",
-    "@nx/workspace": "22.0.2",
+    "@nx/angular": "22.2.3",
+    "@nx/cypress": "22.2.3",
+    "@nx/devkit": "22.2.3",
+    "@nx/eslint": "22.2.3",
+    "@nx/eslint-plugin": "22.2.3",
+    "@nx/js": "22.2.3",
+    "@nx/plugin": "22.2.3",
+    "@nx/storybook": "22.2.3",
+    "@nx/vite": "22.2.3",
+    "@nx/vitest": "22.2.3",
+    "@nx/web": "22.2.3",
+    "@nx/workspace": "22.2.3",
     "@openapitools/openapi-generator-cli": "2.13.4",
     "@schematics/angular": "20.3.6",
-    "@storybook/addon-a11y": "9.0.10",
-    "@storybook/addon-docs": "9.0.10",
-    "@storybook/addon-links": "9.0.10",
-    "@storybook/angular": "9.0.10",
-    "@storybook/builder-vite": "9.0.10",
-    "@storybook/test-runner": "0.23.0",
+    "@storybook/addon-a11y": "10.1.9",
+    "@storybook/addon-docs": "10.1.9",
+    "@storybook/addon-links": "10.1.9",
+    "@storybook/angular": "10.1.9",
+    "@storybook/builder-vite": "10.1.9",
+    "@storybook/test-runner": "0.24.2",
     "@swc-node/register": "1.9.1",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.5.7",
@@ -170,7 +171,7 @@
     "@vitest/ui": "1.6.1",
     "cross-env": "7.0.3",
     "crypto-js": "4.2.0",
-    "cypress": "14.5.4",
+    "cypress": "15.6.0",
     "dependency-cruiser": "16.10.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "10.1.8",
@@ -178,7 +179,7 @@
     "eslint-plugin-cypress": "2.13.4",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-sonarjs": "3.0.5",
-    "eslint-plugin-storybook": "9.0.10",
+    "eslint-plugin-storybook": "10.1.9",
     "happy-dom": "20.0.2",
     "html-webpack-plugin": "5.6.0",
     "husky": "8.0.3",
@@ -189,12 +190,12 @@
     "minimatch": "10.0.1",
     "msw": "2.7.3",
     "ng-packagr": "20.3.0",
-    "nx": "22.0.2",
+    "nx": "22.2.3",
     "prettier": "3.6.2",
     "semver": "7.7.1",
     "shell-quote": "1.8.2",
     "source-map-explorer": "2.5.3",
-    "storybook-addon-pseudo-states": "9.0.10",
+    "storybook-addon-pseudo-states": "10.1.9",
     "ts-node": "10.9.2",
     "typescript": "5.9.3",
     "typescript-eslint": "7.16.0",
