--- a/package.json
+++ b/package.json
@@ -59,17 +59,17 @@
   },
   "dependencies": {
     "@analogjs/vite-plugin-angular": "2.1.3",
-    "@angular/animations": "20.3.6",
-    "@angular/cdk": "20.2.9",
-    "@angular/common": "20.3.6",
-    "@angular/compiler": "20.3.6",
-    "@angular/core": "20.3.6",
-    "@angular/forms": "20.3.6",
-    "@angular/material": "20.2.9",
-    "@angular/platform-browser": "20.3.6",
-    "@angular/platform-browser-dynamic": "20.3.6",
-    "@angular/router": "20.3.6",
-    "@angular/service-worker": "20.3.6",
+    "@angular/animations": "20.3.15",
+    "@angular/cdk": "20.2.14",
+    "@angular/common": "20.3.15",
+    "@angular/compiler": "20.3.15",
+    "@angular/core": "20.3.15",
+    "@angular/forms": "20.3.15",
+    "@angular/material": "20.2.14",
+    "@angular/platform-browser": "20.3.15",
+    "@angular/platform-browser-dynamic": "20.3.15",
+    "@angular/router": "20.3.15",
+    "@angular/service-worker": "20.3.15",
     "@apollo/client": "3.13.8",
     "@azure/msal-angular": "4.0.19",
     "@azure/msal-browser": "4.21.0",
@@ -108,9 +108,9 @@
     "@angular-eslint/eslint-plugin": "20.4.0",
     "@angular-eslint/eslint-plugin-template": "20.4.0",
     "@angular-eslint/template-parser": "20.4.0",
-    "@angular/cli": "~20.3.0",
-    "@angular/compiler-cli": "20.3.6",
-    "@angular/language-service": "20.3.6",
+    "@angular/cli": "20.3.13",
+    "@angular/compiler-cli": "20.3.15",
+    "@angular/language-service": "20.3.15",
     "@babel/core": "7.26.10",
     "@babel/runtime": "7.26.10",
     "@bahmutov/cypress-esbuild-preprocessor": "2.2.5",
@@ -141,7 +141,7 @@
     "@nx/web": "22.2.3",
     "@nx/workspace": "22.2.3",
     "@openapitools/openapi-generator-cli": "2.13.4",
-    "@schematics/angular": "20.3.6",
+    "@schematics/angular": "20.3.13",
     "@storybook/addon-a11y": "10.1.9",
     "@storybook/addon-docs": "10.1.9",
     "@storybook/addon-links": "10.1.9",
