--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "test": "nx run-many --targets=test,component-test --parallel",
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
-    "take": "nx run @ene½rginet-datahub/tools/github:create-branch-from-issue --skip-nx-cache",
+    "take": "nx run @energinet-datahub/tools/github:create-branch-from-issue --skip-nx-cache",
     "branch": "nx run @energinet-datahub/tools/github:create-branch --skip-nx-cache",
     "pr": "nx run @energinet-datahub/tools/github:create-pr --skip-nx-cache",
     "task": "bun run $(jq .scripts package.json | cut -d'\"' -f2 | fzf | xargs)",
