--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -123,6 +123,9 @@
       "@energinet-datahub/dh/metering-point/feature-move-in": [
         "libs/dh/metering-point/feature-move-in/src/index.ts"
       ],
+      "@energinet-datahub/dh/metering-point/feature-actor-conversation": [
+        "libs/dh/metering-point/feature-actor-conversation/src/index.ts"
+      ],
       "@energinet-datahub/dh/metering-point/feature-overview": [
         "libs/dh/metering-point/feature-overview/src/index.ts"
       ],
