--- a/libs/watt/tsconfig.json
+++ b/libs/watt/tsconfig.json
@@ -14,7 +14,7 @@
     }
   ],
   "compilerOptions": {
-    "target": "es2022",
+    "target": "esnext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
