--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -111,6 +111,9 @@
         "libs/dh/message-archive/feature-search/src/index.ts"
       ],
       "@energinet-datahub/dh/message-archive/shell": ["libs/dh/message-archive/shell/src/index.ts"],
+      "@energinet-datahub/dh/metering-point/feature-actor-conversation": [
+        "libs/dh/metering-point/feature-actor-conversation/src/index.ts"
+      ],
       "@energinet-datahub/dh/metering-point/feature-chargelink": [
         "libs/dh/metering-point/feature-chargelink/src/index.ts"
       ],
