--- a/tools/github/project.json
+++ b/tools/github/project.json
@@ -14,6 +14,12 @@
         "command": "bun ./tools/github/src/create-branch.ts"
       }
     },
+    "cleanup-branch": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "bun ./tools/github/src/cleanup-branch.ts"
+      }
+    },
     "create-branch-from-issue": {
       "executor": "nx:run-commands",
       "options": {
