refactor: update tsconfig files to exclude vite.config.mts and adjust test setup for Vitest
- Updated tsconfig.lib.json files across multiple libraries to exclude vite.config.mts instead of jest.config.ts.
- Modified test setup files to import '@analogjs/vitest-angular/setup-zone' and '@testing-library/jest-dom/vitest' instead of jest-preset-angular.
- Changed comments in code to reflect the transition from Jest to Vitest for testing.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,7 +6,7 @@
     "davidanson.vscode-markdownlint",
     "nrwl.angular-console",
     "esbenp.prettier-vscode",
-    "firsttris.vscode-jest-runner",
+    "vitest.explorer",
     "ms-vsliveshare.vsliveshare",
     "GraphQL.vscode-graphql",
     "ms-vscode.powershell",
