--- a/libs/dh/shared/ui-util/tsconfig.lib.json
+++ b/libs/dh/shared/ui-util/tsconfig.lib.json
@@ -10,11 +10,11 @@
   "exclude": [
     "src/test-setup.ts",
     "**/*.spec.ts",
-    "jest.config.ts",
+    "vite.config.mts",
     "**/*.test.ts",
     "vite.config.ts",
     "vite.config.mts",
-    "vitest.config.ts",
+    "vite.config.mts",
     "vitest.config.mts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
