--- a/apps/dh/api-dh/source/DataHub.WebApi/appsettings.json.sample
+++ b/apps/dh/api-dh/source/DataHub.WebApi/appsettings.json.sample
@@ -15,6 +15,7 @@
     "NotificationsBaseUrl": "https://localhost:5091",
     "Dh2BridgeBaseUrl": "https://localhost:5091",
     "ElectricityMarketBaseUrl": "https://localhost:5091",
+    "ActorConversationBaseUrl": "https://localhost:5091",
   },
   "APPLICATIONINSIGHTS_CONNECTION_STRING": "APPLICATIONINSIGHTS_CONNECTION_STRING",
   "UserAuthentication:MitIdExternalMetadataAddress": "https://<url>",
