--- a/apps/dh/api-dh/source/DataHub.WebApi/DataHub.WebApi.csproj
+++ b/apps/dh/api-dh/source/DataHub.WebApi/DataHub.WebApi.csproj
@@ -109,4 +109,8 @@ limitations under the License.
     <_ContentIncludedByDefault Remove="Clients\EDI\B2CWebApi\V3\nswag.json" />
     <_ContentIncludedByDefault Remove="Clients\EDI\B2CWebApi\V3\swagger.json" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="appsettings.json" />
+  </ItemGroup>
 </Project>
