--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -199,6 +199,7 @@
         "libs/dh/shared/util-application-insights/src/index.ts"
       ],
       "@energinet-datahub/dh/shared/util-assert": ["libs/dh/shared/util-assert/src/index.ts"],
+      "@energinet-datahub/dh/shared/util-iframe": ["libs/dh/shared/util-iframe/src/index.ts"],
       "@energinet-datahub/dh/shared/util-new-version-manager": [
         "libs/dh/shared/util-new-version-manager/src/index.ts"
       ],
