--- a/nx.json
+++ b/nx.json
@@ -107,7 +107,7 @@
         }
       ],
       "inputs": ["default", "^production"],
-      "cache": true
+      "cache": false
     },
     "build-storybook": {
       "inputs": [
