--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -120,6 +120,9 @@
       "@energinet-datahub/dh/metering-point/feature-debug": [
         "libs/dh/metering-point/feature-debug/src/index.ts"
       ],
+      "@energinet-datahub/dh/metering-point/feature-end-of-supply": [
+        "libs/dh/metering-point/feature-end-of-supply/src/index.ts"
+      ],
       "@energinet-datahub/dh/metering-point/feature-measurements": [
         "libs/dh/metering-point/feature-measurements/src/index.ts"
       ],
