--- a/apps/dh/api-dh/.editorconfig
+++ b/apps/dh/api-dh/.editorconfig
@@ -146,6 +146,14 @@ dotnet_naming_symbols.constant_fields.applicable_kinds            = field
 dotnet_naming_symbols.constant_fields.applicable_accessibilities  = *
 dotnet_naming_symbols.constant_fields.required_modifiers          = const
 
+# Use PascalCase for static readonly fields
+dotnet_naming_rule.static_readonly_fields_should_be_pascal_case.severity = suggestion
+dotnet_naming_rule.static_readonly_fields_should_be_pascal_case.symbols  = static_readonly_fields
+dotnet_naming_rule.static_readonly_fields_should_be_pascal_case.style    = pascal_case_style
+dotnet_naming_symbols.static_readonly_fields.applicable_kinds            = field
+dotnet_naming_symbols.static_readonly_fields.applicable_accessibilities  = *
+dotnet_naming_symbols.static_readonly_fields.required_modifiers          = static, readonly
+
 # Instance fields are camelCase and start with _
 dotnet_naming_rule.instance_fields_should_be_camel_case.severity = suggestion
 dotnet_naming_rule.instance_fields_should_be_camel_case.symbols = instance_fields
