--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -271,6 +271,7 @@
       "@energinet/watt/expansion": ["libs/watt/package/expansion/index.ts"],
       "@energinet/watt/field": ["libs/watt/package/field/index.ts"],
       "@energinet/watt/file-field": ["libs/watt/package/file-field/index.ts"],
+      "@energinet/watt/heading": ["libs/watt/package/heading/index.ts"],
       "@energinet/watt/icon": ["libs/watt/package/icon/index.ts"],
       "@energinet/watt/icon/flags": ["libs/watt/package/icon/flags/index.ts"],
       "@energinet/watt/intersection-observer": [
