--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
   "devDependencies": {
     "@actions/core": "1.10.1",
     "@analogjs/vitest-angular": "2.1.3",
+    "@angular-devkit/build-angular": "20.3.15",
     "@angular-eslint/eslint-plugin": "20.4.0",
     "@angular-eslint/eslint-plugin-template": "20.4.0",
     "@angular-eslint/template-parser": "20.4.0",
