--- a/apps/dh/api-dh/source/DataHub.WebApi/DataHub.WebApi.csproj
+++ b/apps/dh/api-dh/source/DataHub.WebApi/DataHub.WebApi.csproj
@@ -54,6 +54,7 @@ limitations under the License.
   <ItemGroup>
     <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.2.0" />
     <PackageReference Include="Energinet.DataHub.Charges.Client" Version="2.0.1" />
+    <PackageReference Include="Energinet.DataHub.Core.App.Common" Version="15.11.0" />
     <PackageReference Include="Energinet.DataHub.EDI.B2CClient" Version="1.1.2" />
     <PackageReference Include="Energinet.DataHub.ElectricityMarket.Client" Version="1.51.0" />
     <PackageReference Include="Energinet.DataHub.MarketParticipant.Authorization" Version="3.0.6" />
