Make much simpler query specs

--- a/libs/dh/shared/util-apollo/tsconfig.lib.json
+++ b/libs/dh/shared/util-apollo/tsconfig.lib.json
@@ -5,8 +5,8 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
   },
-  "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "vite.config.mts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "exclude": ["tests/**/*.ts", "vite.config.mts"],
+  "include": ["src/**/*.ts"],
 }
