--- a/libs/dh/shared/util-apollo/tsconfig.spec.json
+++ b/libs/dh/shared/util-apollo/tsconfig.spec.json
@@ -4,8 +4,8 @@
     "outDir": "../../../../dist/out-tsc",
     "module": "ESNext",
     "target": "ESNext",
-    "types": ["vitest/globals", "node"]
+    "types": ["vitest/globals", "node"],
   },
-  "files": ["src/test-setup.ts"],
-  "include": ["vite.config.mts", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
+  "files": ["tests/test-setup.ts"],
+  "include": ["vite.config.mts", "tests/**/*.ts"],
 }
